<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">刘星新闻客户端</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">dummy_content</string>
    <string name="tab_function">首页</string>
    <string name="tab_news_center">新闻中心</string>
    <string name="tab_smart_service">智慧服务</string>
    <string name="tab_gov_affairs">政务指南</string>
    <string name="tab_setting">设置</string>
    <string name="share_content">千龙智慧北京新闻平台非常的好</string>
    <string name="removeItem">删除</string>
    <string name="tiyan">开始体验</string>
    <string name="main_home">主页</string>
    <string name="splash_btn">跳过</string>
    <string name="guide_btn">开始体验</string>
    <string name="home_zhu">主页</string>
    <string name="menu_left">我是侧拉菜单</string>
    <string name="news">新闻中心</string>
    <string name="setting">设置中心</string>
    <string name="finance">财务指南</string>




    <string name="pushmsg_center_no_more_msg">已经到底啦</string>
    <string name="pushmsg_center_pull_up_text">松开加载更多</string>
    <string name="pushmsg_center_pull_down_text">下拉可以刷新</string>
    <string name="pushmsg_center_pull_release_text">松开获取更多</string>
    <string name="pushmsg_center_pull_down_update_time">上次刷新时间 : </string>
    <string name="pushmsg_center_load_more_ongoing_text">正在加载中</string>
    <string name="xsearch_loading">正在刷新…</string>

    <!-- 加载图片失败时的提示文本 -->
    <string name="picture_load_image_failed">点击屏幕，重新加载</string>
    <!-- 加载中提示 -->
    <string name="picture_image_loading">正在加载…</string>

    <!-- 下拉刷新和上拉加载更多的文本 -->
    <string name="pull_to_refresh_header_hint_normal">@string/pushmsg_center_pull_down_text</string>
    <string name="pull_to_refresh_header_hint_normal2">上拉可以刷新</string>
    <string name="pull_to_refresh_header_hint_ready">松开后刷新</string>
    <string name="pull_to_refresh_header_hint_loading">@string/pushmsg_center_load_more_ongoing_text</string>
    <string name="pull_to_refresh_header_last_time">@string/pushmsg_center_pull_down_update_time</string>
    <string name="pull_to_refresh_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_refreshing_label">@string/pull_to_refresh_header_hint_loading</string>
    <string name="pull_to_refresh_no_more_data">@string/pushmsg_center_no_more_msg</string>
    <string name="pull_to_refresh_network_error">网络不给力，请检查网络</string>

    <!-- 图片保存的文字 -->
    <string name="picture_save_succeed">图片已保存到相册</string>
    <string name="picture_save_fail">保存图片失败</string>
    <string name="picture_next_album">下一组：</string>
    <string name="picture_previous_album">上一组：</string>


</resources>
